2007-01-27  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: add enter to collapse row as well

2007-01-27  Benny Malengier  <benny.malengier@ugent.be>
	* src/DataViews/_PersonView.py: add enter to expand a tree row
	
2007-01-27  Don Allingham  <don@gramps-project.org>
	* src/PageView.py: add key accelerators
	* src/ViewManager.py: block interface on autobackup (#856), add key
	accelerators
	* src/DisplayState.py: block interface on autobackup
	* src/Utils.py: handle missing/invalid encoding
	* src/DisplayModels/_BaseModel.py: handle None vs. 0
	* src/Editors/_EditPerson.py (EditPerson._image_button_press): check
	for window already being open (#882)

2007-01-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: make unicode the default for export
	* src/GrampsDb/gedcompexport.glade: remove unused dialog
	* src/plugins/WritePkg.py: don't attempt to delete missing media objects.

2007-01-26  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/ReportUtils.py: 0000875: _ReportUtils.py has incorrect 
	  conversion cm2pt
	* src/FontScale.py: add string_trim()
	* src/plugins/Calendar.py: 0000876: Calendar would print beyond a day's 
	  borders if too many, or too long

2007-01-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: fix accelerator entries
	(MediaView.define_actions): add tooltip for view menu
	* src/DataViews/_RepositoryView.py: fix accelerator entries
	* src/DataViews/_SourceView.py: fix accelerator entries
	* src/DataViews/_EventView.py: fix accelerator entries
	* src/DataViews/_FamilyList.py: fix accelerator entries
	* src/DataViews/_PlaceView.py: fix accelerator entries
	* src/DataViews/_PersonView.py: fix accelerator entries
	* src/ViewManager.py: fix accelerator entries
	* src/PageView.py: fix accelerator entries
	
2007-01-26 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/ObjectSelector/_FilterFrameBase.py: wrap in EventBox so 
	that clipping work properly.
	